# Proyecto-II-SO

./: README.md  startup.sh
ClientGRPC/: ClientGRPC.sln
ClientGRPC/ClientGRPC/: ClientGRPC.csproj  Cliente.cs  Program.cs  RequestModel.cs  ValidatorHelper.cs
ClientGRPC/ClientGRPC/Protos/: beers.proto
GrpcService1/: GrpcService1.sln
GrpcService1/GrpcService1/: GrpcService1.csproj  Program.cs
GrpcService1/GrpcService1/Properties/: launchSettings.json
GrpcService1/GrpcService1/Protos/: greet.proto
GrpcService1/GrpcService1/Services/: GreeterService.cs
GrpcServiceMessage/: GrpcServiceMessage.sln
GrpcServiceMessage/GrpcServiceMessage/: GrpcServiceMessage.csproj  Program.cs  log.txt
GrpcServiceMessage/GrpcServiceMessage/Class/: Cliente.cs  Topic.cs
GrpcServiceMessage/GrpcServiceMessage/Properties/: launchSettings.json
GrpcServiceMessage/GrpcServiceMessage/Protos/: greet.proto
GrpcServiceMessage/GrpcServiceMessage/Services/: GreeterService.cs
proyecto2_c_grpc/: CMakeCache.txt  CMakeLists.txt  Cliente.cpp  Cliente_Proto.grpc.pb.cc  Cliente_Proto.grpc.pb.h  Cliente_Proto.pb.cc  Cliente_Proto.pb.h  Cliente_Proto.proto  Makefile  cmake_install.cmake  compile_commands.json
